fixing responsive issues

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="container">
 
-            <div class="logo">Logo</div>
+            <div class="logo">JurisInsight</div>
 
             <div class="toggle" id="toggle-button">☰</div> <!-- Toggle button -->
 
