--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="container">
 
-            <div class="logo">JurisInsight</div>
+            <div class="logo"> <a href="#top"> JurisInsight </a> </div>
 
             <div class="toggle" id="toggle-button">☰</div> <!-- Toggle button -->
 
