adding backlinks for authnester

--- a/index.html
+++ b/index.html
@@ -1158,11 +1158,18 @@
       </div>
     </section>
 
-    <footer>
-      <p>&copy; 2025 JurisInsight. All rights reserved.</p>
-
-      <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 JurisInsight. All rights reserved.</p>
+    <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+    
+    <!-- Add this line for Authnester backlink -->
+    <p style="margin-top: 10px; font-size: 0.9rem; color: #ccc;">
+        Website security verified by 
+        <a href="https://authnester.netlify.app/" target="_blank" rel="noopener" style="color: #fff; text-decoration: underline;">
+            Authnester
+        </a>
+    </p>
+</footer>
 
     <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function () {
